force-app/main/default/objects/genesis__Applications__c/fields/genesis__Pricing_Method__c.field-meta.xml
<CustomField>
    <fullName>genesis__Pricing_Method__c</fullName>
    <label>Pricing Method</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>genesis__Product_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>RATE CARD</fullName>
            </value>
            <value>
                <fullName>MANUAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>