force-app/main/default/objects/genesis__Applications__c/fields/genesis__Primary_Collateral_Code__c.field-meta.xml
<CustomField>
    <fullName>genesis__Primary_Collateral_Code__c</fullName>
    <label>Primary Collateral Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>