force-app/main/default/objects/genesis__Applications__c/fields/genesis__Primary_Property_Address__c.field-meta.xml
<CustomField>
    <fullName>genesis__Primary_Property_Address__c</fullName>
    <description>Address of Primary Property</description>
    <inlineHelpText>Address of Primary Property</inlineHelpText>
    <label>Primary Property Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>