force-app/main/default/objects/genesis__Applications__c/fields/genesis__Primary_Source_of_Repayment__c.field-meta.xml
<CustomField>
    <fullName>genesis__Primary_Source_of_Repayment__c</fullName>
    <label>Primary Source of Repayment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>