force-app/main/default/objects/genesis__Applications__c/fields/genesis__Probability__c.field-meta.xml
<CustomField>
    <fullName>genesis__Probability__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Conversion Probablity</inlineHelpText>
    <label>Probability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>