force-app/main/default/objects/genesis__Applications__c/fields/genesis__Product_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>genesis__Product_Sub_Type__c</fullName>
    <label>Product Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>genesis__Product_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>OPERATING LEASE</fullName>
            </value>
            <value>
                <fullName>FINANCE LEASE</fullName>
            </value>
            <value>
                <fullName>UNDEFINED</fullName>
            </value>
            <value>
                <fullName>CLOSE ENDED</fullName>
            </value>
            <value>
                <fullName>OPEN ENDED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>