force-app/main/default/objects/genesis__Applications__c/fields/genesis__Quick_Quote__c.field-meta.xml
<CustomField>
    <fullName>genesis__Quick_Quote__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Quick Quote #</label>
    <referenceTo>genesis__Quick_Quotes__c</referenceTo>
    <relationshipName>Applications_Quick_Quote</relationshipName>
    <type>Lookup</type>
</CustomField>