force-app/main/default/objects/genesis__Applications__c/fields/genesis__Rate_Discount__c.field-meta.xml
<CustomField>
    <fullName>genesis__Rate_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rate Discount</label>
    <type>Checkbox</type>
</CustomField>