force-app/main/default/objects/genesis__Applications__c/fields/genesis__Rate_Floor__c.field-meta.xml
<CustomField>
    <fullName>genesis__Rate_Floor__c</fullName>
    <label>Rate Floor</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>