force-app/main/default/objects/genesis__Applications__c/fields/genesis__Regulation_O__c.field-meta.xml
<CustomField>
    <fullName>genesis__Regulation_O__c</fullName>
    <label>Regulation O</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Executive Officer</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Principal Shareholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>