force-app/main/default/objects/genesis__Applications__c/fields/genesis__Required_Customer_Cash__c.field-meta.xml
<CustomField>
    <fullName>genesis__Required_Customer_Cash__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Required Customer Cash(=)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>