force-app/main/default/objects/genesis__Applications__c/fields/genesis__Retained_Amount__c.field-meta.xml
<CustomField>
    <fullName>genesis__Retained_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Retained Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>