force-app/main/default/objects/genesis__Applications__c/fields/genesis__Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>genesis__Routing_Number__c</fullName>
    <label>Routing Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>