force-app/main/default/objects/genesis__Applications__c/fields/genesis__Secondary_Source_of_Repayment__c.field-meta.xml
<CustomField>
    <fullName>genesis__Secondary_Source_of_Repayment__c</fullName>
    <label>Secondary Source of Repayment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>