force-app/main/default/objects/genesis__Applications__c/fields/genesis__Spread__c.field-meta.xml
<CustomField>
    <fullName>genesis__Spread__c</fullName>
    <label>Spread</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>