force-app/main/default/objects/genesis__Applications__c/fields/genesis__Status__c.field-meta.xml
<CustomField>
    <fullName>genesis__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APPROVED - APPROVED</fullName>
            </value>
            <value>
                <fullName>APPROVED - CONVERTED TO CONTRACT</fullName>
            </value>
            <value>
                <fullName>APPROVED - DOCUMENT CHECK</fullName>
            </value>
            <value>
                <fullName>NEW - CREDIT PULLED</fullName>
            </value>
            <value>
                <fullName>NEW - ENTERED</fullName>
                <default>true</default>
                <label>NEW - ENTERED</label>
            </value>
            <value>
                <fullName>NEW - IN CREDIT CHECK</fullName>
            </value>
            <value>
                <fullName>NEW - IN REVIEW</fullName>
            </value>
            <value>
                <fullName>NEW - PRICING GENERATED</fullName>
            </value>
            <value>
                <fullName>NEW - SCORECARD GENERATED</fullName>
            </value>
            <value>
                <fullName>NEW - CHECKLIST GENERATED</fullName>
            </value>
            <value>
                <fullName>NEW - VEHICLE VALUATION REQUIRED</fullName>
            </value>
            <value>
                <fullName>REJECTED</fullName>
            </value>
            <value>
                <fullName>PULL CREDIT</fullName>
            </value>
            <value>
                <fullName>Default Documents</fullName>
            </value>
            <value>
                <fullName>offer_accepted</fullName>
            </value>
            <value>
                <fullName>offer_shown</fullName>
            </value>
            <value>
                <fullName>kba_success</fullName>
            </value>
            <value>
                <fullName>kba_fail</fullName>
            </value>
            <value>
                <fullName>agent_document_verification_pending</fullName>
            </value>
            <value>
                <fullName>agent_verification_pending</fullName>
            </value>
            <value>
                <fullName>agent_verified</fullName>
            </value>
            <value>
                <fullName>docusign_loan_docs_sent</fullName>
            </value>
            <value>
                <fullName>docusign_loan_docs_complete</fullName>
            </value>
            <value>
                <fullName>pre_funding</fullName>
            </value>
            <value>
                <fullName>Approved for funding</fullName>
            </value>
            <value>
                <fullName>funded</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Stacker_Check_Passed</fullName>
            </value>
            <value>
                <fullName>Redecision_Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>