force-app/main/default/objects/genesis__Applications__c/fields/genesis__SubLimit_Total__c.field-meta.xml
<CustomField>
    <fullName>genesis__SubLimit_Total__c</fullName>
    <description>Sum of amount on the sublimit for the application</description>
    <inlineHelpText>Sum of amount on the sublimit for the application</inlineHelpText>
    <label>SubLimit Total</label>
    <summarizedField>genesis__SubLimit__c.genesis__Sublimit_Amount__c</summarizedField>
    <summaryForeignKey>genesis__SubLimit__c.genesis__Application__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>