force-app/main/default/objects/genesis__Applications__c/fields/genesis__Sublimit_Variance__c.field-meta.xml
<CustomField>
    <fullName>genesis__Sublimit_Variance__c</fullName>
    <formula>IF( OR(ISPICKVAL(genesis__Product_Type__c ,&apos;LOAN&apos;),ISPICKVAL(genesis__Product_Type__c ,&apos;PACKAGE&apos;)) , genesis__Loan_Amount__c -  genesis__SubLimit_Total__c ,
IF( ISPICKVAL(genesis__Product_Type__c ,&apos;LEASE&apos;), genesis__Financed_Amount__c - genesis__SubLimit_Total__c, genesis__Credit_Limit__c - genesis__SubLimit_Total__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sublimit Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>