force-app/main/default/objects/genesis__Applications__c/fields/genesis__Terms_Selected__c.field-meta.xml
<CustomField>
    <fullName>genesis__Terms_Selected__c</fullName>
    <label>Terms Selected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>