force-app/main/default/objects/genesis__Applications__c/fields/genesis__Total_Cash_Due_from_Customer__c.field-meta.xml
<CustomField>
    <fullName>genesis__Total_Cash_Due_from_Customer__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Cash Due from Customer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>