force-app/main/default/objects/genesis__Applications__c/fields/genesis__Total_Dealer_Payable__c.field-meta.xml
<CustomField>
    <fullName>genesis__Total_Dealer_Payable__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Payable To Dealer</description>
    <inlineHelpText>Total Amount Payable To Dealer by lessor.</inlineHelpText>
    <label>Payable To Dealer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>