force-app/main/default/objects/genesis__Applications__c/fields/genesis__Total_Dealer_Price__c.field-meta.xml
<CustomField>
    <fullName>genesis__Total_Dealer_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total Dealer Price</description>
    <inlineHelpText>Total Dealer Price.</inlineHelpText>
    <label>Total Dealer Charges (=)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>