force-app/main/default/objects/genesis__Applications__c/fields/genesis__Total_Estimated_Interest__c.field-meta.xml
<CustomField>
    <fullName>genesis__Total_Estimated_Interest__c</fullName>
    <label>Total Estimated Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>