force-app/main/default/objects/genesis__Applications__c/fields/genesis__Total_Facilities__c.field-meta.xml
<CustomField>
    <fullName>genesis__Total_Facilities__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Facilities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>