force-app/main/default/objects/genesis__Applications__c/fields/genesis__Total_Facility_Amount__c.field-meta.xml
<CustomField>
    <fullName>genesis__Total_Facility_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Sum of loan amount of all the facilities in the Package</description>
    <inlineHelpText>Sum of loan amount of all the facilities in the Package</inlineHelpText>
    <label>Total Facility Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>