force-app/main/default/objects/genesis__Applications__c/fields/genesis__Total_Facility_Variance__c.field-meta.xml
<CustomField>
    <fullName>genesis__Total_Facility_Variance__c</fullName>
    <description>Difference in loan amount on package application and the total facility amount</description>
    <formula>genesis__Loan_Amount__c  -  genesis__Total_Facility_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Difference in loan amount on package application and the total facility amount</inlineHelpText>
    <label>Total Facility Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>