force-app/main/default/objects/genesis__Applications__c/fields/genesis__Total_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>genesis__Total_Fee_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Sum of fee amount of all the fees associated with the application</description>
    <inlineHelpText>Sum of fee amount of all the fees associated with the application</inlineHelpText>
    <label>Total Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>