force-app/main/default/objects/genesis__Applications__c/fields/genesis__Total_Pledged_Collateral_Amount__c.field-meta.xml
<CustomField>
    <fullName>genesis__Total_Pledged_Collateral_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Sum of pledged amount of all the collaterals associated with the application</description>
    <inlineHelpText>Sum of pledged amount of all the collaterals associated with the application</inlineHelpText>
    <label>Total Pledged Collateral Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>