force-app/main/default/objects/genesis__Applications__c/fields/genesis__Total_Score__c.field-meta.xml
<CustomField>
    <fullName>genesis__Total_Score__c</fullName>
    <label>Total Score</label>
    <summarizedField>genesis__Application_s_Scorecard__c.genesis__Weighted_Score__c</summarizedField>
    <summaryForeignKey>genesis__Application_s_Scorecard__c.genesis__Application__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>