force-app/main/default/objects/genesis__Applications__c/fields/genesis__Total_Upfront_Payments__c.field-meta.xml
<CustomField>
    <fullName>genesis__Total_Upfront_Payments__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Upfront Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>