force-app/main/default/objects/genesis__Applications__c/fields/genesis__Valid_Pricing_Flag__c.field-meta.xml
<CustomField>
    <fullName>genesis__Valid_Pricing_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be set to true once the pricing has been generated, but any subsequent update on quick quote will set this to false and will force user to generate the pricing again.</description>
    <inlineHelpText>This field will be set to true once the pricing has been generated, but any subsequent update on quick quote will set this to false and will force user to generate the pricing again.</inlineHelpText>
    <label>Valid Pricing Flag</label>
    <type>Checkbox</type>
</CustomField>