force-app/main/default/objects/genesis__Applications__c/fields/genesis__Warranty_Amount__c.field-meta.xml
<CustomField>
    <fullName>genesis__Warranty_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Warranty Amount(+)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>