force-app/main/default/objects/genesis__Applications__c/fields/GIACT_Date__c.field-meta.xml
<CustomField>
    <fullName>GIACT_Date__c</fullName>
    <description>GIACT Performed Date</description>
    <inlineHelpText>GIACT Performed Date</inlineHelpText>
    <label>GIACT Date</label>
    <type>Date</type>
</CustomField>