force-app/main/default/objects/genesis__Applications__c/fields/GIACT_Status__c.field-meta.xml
<CustomField>
    <fullName>GIACT_Status__c</fullName>
    <label>GIACT Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>