force-app/main/default/objects/genesis__Applications__c/fields/GIACTPerformed_By__c.field-meta.xml
<CustomField>
    <fullName>GIACTPerformed_By__c</fullName>
    <label>GIACTPerformed By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>