force-app/main/default/objects/genesis__Applications__c/fields/Identity_Counter__c.field-meta.xml
<CustomField>
    <fullName>Identity_Counter__c</fullName>
    <label>Identity Counter</label>
    <summarizedField>Identity_Verification__c.count__c</summarizedField>
    <summaryForeignKey>Identity_Verification__c.Application__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>