force-app/main/default/objects/genesis__Applications__c/fields/Initial_Term_Payment_Amt__c.field-meta.xml
<CustomField>
    <fullName>Initial_Term_Payment_Amt__c</fullName>
    <formula>Total_of_Payments__c /  genesis__Term__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Term Payment Amt</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>