force-app/main/default/objects/genesis__Applications__c/fields/Investor__c.field-meta.xml
<CustomField>
    <fullName>Investor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.loan__Investor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications (Investor)</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>