force-app/main/default/objects/genesis__Applications__c/fields/Investor_Selected__c.field-meta.xml
<CustomField>
    <fullName>Investor_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Investor Selected</label>
    <type>Checkbox</type>
</CustomField>