force-app/main/default/objects/genesis__Applications__c/fields/InvestorAddress__c.field-meta.xml
<CustomField>
    <fullName>InvestorAddress__c</fullName>
    <formula>Investor__r.Name  +
Investor__r.City__c   +
Investor__r.ZIP_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InvestorAddress</label>
    <type>Text</type>
</CustomField>