force-app/main/default/objects/genesis__Applications__c/fields/Iovation_Status__c.field-meta.xml
<CustomField>
    <fullName>Iovation_Status__c</fullName>
    <label>Iovation Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>