force-app/main/default/objects/genesis__Applications__c/fields/is_ApplicationExpiryPosted__c.field-meta.xml
<CustomField>
    <fullName>is_ApplicationExpiryPosted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is ApplicationExpiryPosted</label>
    <type>Checkbox</type>
</CustomField>