force-app/main/default/objects/genesis__Applications__c/fields/is_PB_running__c.field-meta.xml
<CustomField>
    <fullName>is_PB_running__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is PB running?</label>
    <type>Checkbox</type>
</CustomField>