force-app/main/default/objects/genesis__Applications__c/fields/is_Plaid_Asset_Available__c.field-meta.xml
<CustomField>
    <fullName>is_Plaid_Asset_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Plaid Asset Available</label>
    <type>Checkbox</type>
</CustomField>