force-app/main/default/objects/genesis__Applications__c/fields/isHardPull__c.field-meta.xml
<CustomField>
    <fullName>isHardPull__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isHardPull</label>
    <type>Checkbox</type>
</CustomField>