force-app/main/default/objects/genesis__Applications__c/fields/isRedecision__c.field-meta.xml
<CustomField>
    <fullName>isRedecision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isRedecision</label>
    <type>Checkbox</type>
</CustomField>