force-app/main/default/objects/genesis__Applications__c/fields/isSelfEmployed__c.field-meta.xml
<CustomField>
    <fullName>isSelfEmployed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSelfEmployed</label>
    <type>Checkbox</type>
</CustomField>