force-app/main/default/objects/genesis__Applications__c/fields/IV_Performed_By__c.field-meta.xml
<CustomField>
    <fullName>IV_Performed_By__c</fullName>
    <label>IV Performed By</label>
    <length>40</length>
    <type>Text</type>
</CustomField>