force-app/main/default/objects/genesis__Applications__c/fields/IV_Performed_Date__c.field-meta.xml
<CustomField>
    <fullName>IV_Performed_Date__c</fullName>
    <label>IV Performed Date</label>
    <type>Date</type>
</CustomField>