force-app/main/default/objects/genesis__Applications__c/fields/KBAV_Performed_BY__c.field-meta.xml
<CustomField>
    <fullName>KBAV_Performed_BY__c</fullName>
    <label>KBAV Performed BY</label>
    <length>40</length>
    <type>Text</type>
</CustomField>