force-app/main/default/objects/genesis__Applications__c/fields/KBAV_Performed_Date__c.field-meta.xml
<CustomField>
    <fullName>KBAV_Performed_Date__c</fullName>
    <label>KBAV Performed Date</label>
    <type>Date</type>
</CustomField>