force-app/main/default/objects/genesis__Applications__c/fields/Last_Investor_Assigned_On__c.field-meta.xml
<CustomField>
    <fullName>Last_Investor_Assigned_On__c</fullName>
    <label>Last Investor Assigned On</label>
    <type>DateTime</type>
</CustomField>