force-app/main/default/objects/genesis__Applications__c/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <description>This is the LEAD GUID received from FE</description>
    <externalId>true</externalId>
    <label>Lead ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>