force-app/main/default/objects/genesis__Applications__c/fields/LEAD_ID_ExtKey__c.field-meta.xml
<CustomField>
    <fullName>LEAD_ID_ExtKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>LEAD_ID_ExtKey</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>