force-app/main/default/objects/genesis__Applications__c/fields/LeadGUID_XX_BoxFolderID__c.field-meta.xml
<CustomField>
    <fullName>LeadGUID_XX_BoxFolderID__c</fullName>
    <description>This field will contain the box folder id for the parent folder of the lead guid which will be the first 2 digits of the Lead Guid.</description>
    <label>LeadGUID_XX_BoxFolderID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>