force-app/main/default/objects/genesis__Applications__c/fields/LeadGUIDBoxFolderID__c.field-meta.xml
<CustomField>
    <fullName>LeadGUIDBoxFolderID__c</fullName>
    <description>This field will contain the folder id for the Lead guid box folder.</description>
    <label>LeadGUIDBoxFolderID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>