force-app/main/default/objects/genesis__Applications__c/fields/Loading__c.field-meta.xml
<CustomField>
    <fullName>Loading__c</fullName>
    <description>##Conga created btn:00bn0000000QWZB</description>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=aAWn00000003SbY&quot; + 
&quot;&amp;qmode=DocuSign&quot;</formula>
    <label>Loading ...</label>
    <type>Text</type>
</CustomField>