force-app/main/default/objects/genesis__Applications__c/fields/Loan_Doc_Signed_On__c.field-meta.xml
<CustomField>
    <fullName>Loan_Doc_Signed_On__c</fullName>
    <label>Loan Doc Signed On</label>
    <type>Date</type>
</CustomField>