force-app/main/default/objects/genesis__Applications__c/fields/Loan_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Maturity_Date__c</fullName>
    <formula>ADDMONTHS( Anniversary_Date__c , genesis__Term__c-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Maturity Date</label>
    <type>Date</type>
</CustomField>