force-app/main/default/objects/genesis__Applications__c/fields/Loan_Origination_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Origination_Date__c</fullName>
    <label>Loan Origination Date</label>
    <type>Date</type>
</CustomField>