force-app/main/default/objects/genesis__Applications__c/fields/Loan_Premium_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Premium_Amount__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Premium Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>