force-app/main/default/objects/genesis__Applications__c/fields/Loan_Premium_Price__c.field-meta.xml
<CustomField>
    <fullName>Loan_Premium_Price__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Premium Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>