force-app/main/default/objects/genesis__Applications__c/fields/Loan_Term_sub_1__c.field-meta.xml
<CustomField>
    <fullName>Loan_Term_sub_1__c</fullName>
    <formula>genesis__Term__c - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Term sub 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>