force-app/main/default/objects/genesis__Applications__c/fields/Manual_Adverse_Action_Decline__c.field-meta.xml
<CustomField>
    <fullName>Manual_Adverse_Action_Decline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manual Adverse Action Decline</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>This decline reason is not applicable anymore.</errorMessage>
        <filterItems>
            <field>Manual_Adverse_Action_Decline__c.Name</field>
            <operation>notEqual</operation>
            <value>expiration_decline_current_deferral_forbearance</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Manual_Adverse_Action_Decline__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>