force-app/main/default/objects/genesis__Applications__c/fields/Manual_KBA__c.field-meta.xml
<CustomField>
    <fullName>Manual_KBA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>field that determines if application was KBA passed manually</description>
    <label>Manual KBA</label>
    <type>Checkbox</type>
</CustomField>