force-app/main/default/objects/genesis__Applications__c/fields/Manual_Soft_Pull__c.field-meta.xml
<CustomField>
    <fullName>Manual_Soft_Pull__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check if manual soft pull has been completed</description>
    <label>Manual Soft Pull</label>
    <type>Checkbox</type>
</CustomField>